<resources>
    <string name="app_name">Weather</string>
    
    <string name="city">Нижний Новгород</string>
    <string name="condition_text">Описание</string>
    <string name="avgtemp">t</string>
    <string name="maxwind">S</string>
    <string name="avghumidity">h</string>
    <string name="date">Дата</string>
    <string name="search">Поиск города</string>
    <string name="clear_search">Очистка</string>
</resources>